# Elytra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: datasources.yaml  permissions.yaml
config/overlays/: brazilian_ecommerce.yaml  ecommerce_clickhouse.yaml  ecommerce_starrocks.yaml  tpch_duckdb.yaml
datasets/brazilian_ecommerce/: README.md  csv  load_brazilian.py
datasets/clickhouse/: README.md  create_tables.sql  load_data.py
datasets/tpch/: README.md  load_tpch.py
db/: data_dictionary.yaml  init.sql  seed_data.sql
db/migrations/: 001_extend_query_history.sql  002_observability_and_evolution.sql
docker/clickhouse/: docker-compose.clickhouse.yml
docker/starrocks/: README.md  docker-compose.starrocks.yml
eval/: run_eval.py  test_queries.yaml
frontend/: Dockerfile  app.py
frontend-react/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-react/src/: App.jsx  index.css
src/: config.py  main.py
src/agent/: cost.py  graph.py  llm.py
src/api/: audit.py  conversation.py  datasources.py  env_config.py  evolution.py  feedback.py  history.py  query.py  query_async.py  schema.py  ws.py
src/auth/: permission.py
src/chart/: echarts_builder.py  inferrer.py
src/connectors/: __init__.py  base.py  clickhouse_connector.py  duckdb_connector.py  factory.py  overlay.py  postgres_connector.py  registry.py  starrocks_connector.py
src/db/: connection.py  executor.py
src/evolution/: __init__.py  experience_store.py  feedback_store.py
tests/: test_agent.py  test_api.py  test_audit.py  test_chart.py  test_connectors.py  test_llm_providers.py  test_permissions.py  test_retrieval.py  test_sanitizer.py  test_tasks.py
(+70 files in other folders)
